ingreso del proyecto 2

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#hobbie">Hobbies</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
@@ -102,7 +105,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section class="success" id="portfolio">
+    <section class="success" id="hobbie">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -156,13 +159,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/Pokeball.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -468,6 +471,30 @@
                             <h2>Under Construction</h2>
                             <hr class="star-light">
                             <img src="img/portfolio/under.jpg" class="img-responsive img-centered" alt="">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Pokemon Viwer</h2>
+                            <hr class="star-light">
+                            <img src="img/portfolio/proyecto pokemon.jpg" class="img-responsive img-centered" alt="">
+                            <p>Aplicacion que te permite agregar una lista de pokemon que seran parte de tu equipo competitivo.
+                            Haz click <a href="https://proyecto2-pokemon.herokuapp.com/get-data">aqui</a> para ingresar.</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
